--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,9 @@
 
 tasks:
   - init: npm install #3&& npm run build
-    command: npm run dev
+    command: | 
+     export HMR_HOST=`gp url 3000`
+     npm run dev
 vscode:
   extensions:
     - dbaeumer.vscode-eslint
