Configure Gitpod prebuilds.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,3 +17,9 @@ vscode:
 ports:
   - port: 3000
     onOpen: open-browser
+
+github:
+  prebuilds:
+    master: true
+    brances: true
+    pullRequests: true
