--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,17 +9,25 @@ tasks:
     command: | 
      export HMR_HOST=`gp url 3000`
      npm run dev
+    env:
+      DATABASE_URL: postgres://gitpod@localhost/todos
+  - command: npx prisma studio
+    env:
+      DATABASE_URL: postgres://gitpod@localhost/todos
+
 vscode:
   extensions:
     - dbaeumer.vscode-eslint
-
     - svelte.svelte-vscode
+    - prisma.prisma
 
 ports:
   - port: 3000
     onOpen: open-browser
   - port: 5432
     onOpen: ignore
+  - port: 5555
+    onOpen: open-browser
 
 github:
   prebuilds:
